--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,7 +14,7 @@
 
 {% if latest_entry %}
 <div class="row mb-4">
-    <div class="col-md-3">
+    <div class="col-6 col-md-3 mb-3">
         <div class="card stats-card income-card">
             <div class="card-body">
                 <div class="stats-icon">
@@ -29,7 +29,7 @@
         </div>
     </div>
     
-    <div class="col-md-3">
+    <div class="col-6 col-md-3 mb-3">
         <div class="card stats-card expense-card">
             <div class="card-body">
                 <div class="stats-icon">
@@ -44,7 +44,7 @@
         </div>
     </div>
     
-    <div class="col-md-3">
+    <div class="col-6 col-md-3 mb-3">
         <div class="card stats-card savings-card">
             <div class="card-body">
                 <div class="stats-icon">
@@ -61,7 +61,7 @@
         </div>
     </div>
     
-    <div class="col-md-3">
+    <div class="col-6 col-md-3 mb-3">
         <div class="card stats-card salary-card">
             <div class="card-body">
                 <div class="stats-icon">
